--- a/index.html
+++ b/index.html
@@ -107,8 +107,15 @@
                                 <a href="">
                                     <span><i class="ri-phone-fill"></i></span>
                                     <span>
-                                        +233 (0) 54 970 8561 <br>
-                                        +233 (0) 50 195 4123
+                                        +233 (0) 53 064 4335
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <span><i class="ri-phone-fill"></i></span>
+                                    <span>
+                                        +233 (0) 53 058 2338
                                     </span>
                                 </a>
                             </li>
@@ -126,7 +133,31 @@
             </section>
             <section id="map">
                 <div class="container">
+                    <div class="mapouter">
+                        <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no"
+                                marginheight="0" marginwidth="0"
+                                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=salvation army road, tabora, ghana&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                                href="https://strandsgame.net/">Strands Game</a></div>
+                        <style>
+                            .mapouter {
+                                position: relative;
+                                text-align: right;
+                                width: 100%;
+                                height: 400px;
+                            }
 
+                            .gmap_canvas {
+                                overflow: hidden;
+                                background: none !important;
+                                width: 100%;
+                                height: 400px;
+                            }
+
+                            .gmap_iframe {
+                                height: 400px !important;
+                            }
+                        </style>
+                    </div>
                 </div>
             </section>
             <section id="form">
@@ -154,7 +185,25 @@
         </div>
     </main>
     <footer>
-        <div class="container"></div>
+        <div class="container">
+            <div class="col">
+                <a href="" class="image-container">
+                    <img src="assets/images/logo-white.png">
+                </a>
+            </div>
+            <div class="col">
+                <ul>
+                    <li>
+                        <h5>Contact Information</h5>
+                    </li>
+                    <li><a href=""><i class="ri-at-line"></i><span>info@skylimitdivineknowledge.com</span></a></li>
+                    <li><a href=""><i class="ri-phone-line"></i><span>+233 (0) 54 970 8561</span></a></li>
+                    <li><a href=""><i class="ri-phone-line"></i><span>+233 (0) 50 195 4123</span></a></li>
+                    <li><a href=""><i class="ri-map-pin-line"></i><span>GA-464-9916 <br>Sekyi Street, Darkuman
+                                Nyamekye</span></a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <!-- scripts -->
