--- a/index.html
+++ b/index.html
@@ -167,15 +167,16 @@
                     </div>
                     <div class="form-container">
                         <form action="">
+                            <h3>Study Abroad Application</h3>
                             <input type="text" name="fname" id="fname" placeholder="First Name">
                             <input type="text" name="sname" id="sname" placeholder="Surname">
                             <input type="email" name="email" id="email" placeholder="Email">
                             <input type="number" name="phone" id="phone" placeholder="Mobile Number">
                             <select name="pref-country" id="pref-country">
-                                <option value="">Preffered Country</option>
+                                <option value="">Preferred Country</option>
                             </select>
                             <select name="pref-country-2" id="pref-country-2">
-                                <option value="">Preffered Country 2</option>
+                                <option value="">Preferred Country 2</option>
                             </select>
                             <button>Submit</button>
                         </form>
