--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
             <ul class="menu">
                 <li><a href="./">Home</a></li>
-                <li><a href="">Registration</a></li>
-                <li><a href="">Study Abroad</a></li>
+                <li><a href="./#form">Registration</a></li>
+                <li><a href="./#form">Study Abroad</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="./#about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
                         <h1>Connecting You To Education Worldwide</h1>
                         <h3>We provide guidance, support, and expertise to students, parents, educational institutions,
                             and other stakeholders in the field of education.</h3>
-                        <a href="" class="btn">Get Started</a>
+                        <a href="#form" class="btn">Get Started</a>
                     </div>
                     <div class="hero-image-container">
                         <img src="assets/images/hero-image.jpg" alt="Skylimit Divine Knowledge">
