--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skylimit Divine Knowledge</title>
+    <title>Skylimit Divine Knowledge | Contacts</title>
 
     <!-- css -->
     <link rel="stylesheet" href="assets/fonts/remixicons/remixicon.css">
     <link rel="stylesheet" href="assets/styles/contact.css">
 </head>
+
 <body>
     <header>
         <nav class="primary-navigation" id="primary-navigation">
@@ -22,10 +24,10 @@
 
             <ul class="menu">
                 <li><a href="./">Home</a></li>
-                <li><a href="">Registration</a></li>
-                <li><a href="">Study Abroad</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="./#form">Registration</a></li>
+                <li><a href="./#form">Study Abroad</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./#about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -96,10 +98,8 @@
                 <div class="form-container">
                     <form action="">
                         <h3>Help Us Reach You</h3>
-                        <div class="sm-container">
-                            <input type="text" name="fname" id="fname" placeholder="First Name">
-                            <input type="text" name="sname" id="sname" placeholder="Surname">
-                        </div>
+                        <input type="text" name="fname" id="fname" placeholder="First Name">
+                        <input type="text" name="sname" id="sname" placeholder="Surname">
                         <input type="email" name="email" id="email" placeholder="Email">
                         <button>Send</button>
                     </form>
@@ -108,4 +108,5 @@
         </section>
     </main>
 </body>
+
 </html>
